# mep

./: .gitignore  Cargo.toml  LICENSE  README.md  api.md
ch/: Cargo.toml
ch/src/: main.rs
example_scripts/: boilerplate.koto  channel_spread.koto  echo_messages.koto  fails.koto  midi_delay.koto  random_velocity.koto
koto_libraries/random/: Cargo.toml
koto_libraries/random/src/: lib.rs
mep/: Cargo.toml
mep/src/: main.rs  tui.rs
src/: main.rs  tui.rs
