[package]
name = "mep"
version = "0.0.1"
authors = ["alisomay <alisomay@runbox.com>"]
edition = "2021"
license = "MIT"
license-file = "../LICENCE"
description = "A scriptable MIDI event processor."
homepage = "https://github.com/alisomay/mep"
repository = "https://github.com/alisomay/mep"
documentation = "https://github.com/alisomay/mep/blob/main/README.md"
readme = "../README.md"
keywords = ["midi", "event processor", "command line", "mep"]
categories = ["midi", "audio", "music"]
# exclude — Files to exclude when publishing.
# include — Files to include when publishing.

[dependencies]
clap = "2.33.3"
console = "0.15.0"
crossterm = "0.22.1"
dirs = "4.0.0"
koto = { git = "https://github.com/koto-lang/koto", branch= "main" } 
koto_midi = { git = "https://github.com/alisomay/koto_midi", branch= "main" } 
koto_random = { path = "../koto_libraries/random" }
midir = "0.7.0"
notify = "4.0.17"
anyhow = "1.0.44" 


