[package]
name = "koto_random"
version = "0.8.1"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Koto library for working with random numbers"
homepage = "https://github.com/koto-lang/koto"
repository = "https://github.com/koto-lang/koto"
keywords = ["scripting", "language", "koto"]

[dependencies]
koto = { git = "https://github.com/koto-lang/koto", branch= "main" } 
lazy_static = "1.4.0"

rand = "0.7.3"
rand_chacha = "0.2.1"
